# ws_moveit

./: .gitignore  README.md  refresh.sh  rosdep.sh
.github/: FUNDING.yml
src/: .rosinstall.bak
src/Required Folders v0.3 (Real arm)/: Jaco and camera Setup.docx  instructions.txt
src/Required Folders v0.3 (Real arm)/j2s6s300_moveit_config/: _setup_assistant
src/Required Folders v0.3 (Real arm)/kinova_pick_place/: CMakeLists.txt  package.xml
src/Required Folders v0.3 (Real arm)/kinova_pick_place/include/: pick_place_.h
src/Required Folders v0.3 (Real arm)/kinova_pick_place/src/: jaco_pick_place.cpp
src/Required Folders v0.3 (Real arm)/pcl_pkgs/: CMakeLists.txt  package.xml
src/j2s6s300_moveit_config/launch/: demo_gazebo.launch  ros_controllers.launch
src/moveit_task_constructor/demo/: CMakeLists.txt  README.md  package.xml
src/moveit_task_constructor/demo/config/: mtc.rviz  mtc10.rviz  mtc11.rviz  mtc12.rviz  mtc14.rviz  mtc4.rviz  mtc5.rviz  mtc6.rviz  mtc7.rviz  mtc8.rviz  mtc9.rviz  mtc_cartesian.rviz  mtc_cartesian5.rviz  panda_config10.yaml  panda_config11.yaml  panda_config12.yaml  panda_config2.yaml  panda_config4.yaml  panda_config5.yaml  panda_config8.yaml
src/moveit_task_constructor/demo/include/moveit_task_constructor_demo/: pick_place_task9.h
src/moveit_task_constructor/demo/launch/: demo.launch  demo12.launch  demo13.launch  demo14.launch  demo3.launch  demo4.launch  demo5.launch  demo6.launch  demo9.launch  demo_cartesian3.launch  demo_cartesian4.launch  demo_cartesian5.launch  pickplace10.launch  pickplace14.launch  pickplace2.launch  pickplace4.launch  pickplace5.launch  pickplace7.launch  pickplace8.launch
src/moveit_task_constructor/demo/src/: cartesian3.cpp  cartesian4.cpp  cartesian5.cpp  moveit_task_constructor_demo11.cpp  moveit_task_constructor_demo12.cpp  moveit_task_constructor_demo15.cpp  moveit_task_constructor_demo2.cpp  moveit_task_constructor_demo3.cpp  moveit_task_constructor_demo5.cpp  moveit_task_constructor_demo6.cpp  moveit_task_constructor_demo7.cpp  moveit_task_constructor_demo8.cpp  moveit_task_constructor_demo9.cpp  pick_place_task.cpp  pick_place_task11.cpp  pick_place_task12.cpp  pick_place_task13.cpp  pick_place_task2.cpp  pick_place_task4.cpp  pick_place_task5.cpp  pick_place_task6.cpp  pick_place_task7.cpp  pick_place_task8.cpp  pick_place_task9.cpp  pouring_cleaned.cpp
src/mtc_demos/: CMakeLists.txt  package.xml
src/mtc_demos/rviz/: moveit.rviz
src/mtc_demos/src/: CMakeLists.txt  baxter.cpp  baxter_bimodal.cpp  pa10.cpp  pa10_bimodal.cpp  pepper.cpp  pepper_bimanual.cpp  pepper_bimodal.cpp  pr2.cpp  pr2_bimodal.cpp  test_utils.h  yumi_bimanual.cpp  yumi_handover.cpp
src/mtc_demos/stages/: CMakeLists.txt  bimanual_grasp_pose.cpp  bimanual_grasp_pose.h  generate_touch_pose.cpp  generate_touch_pose.h
src/mtc_demos/test/: CMakeLists.txt  baxter_bimodal.test  pa10_bimodal.test  pepper_bimanual.test  pepper_bimodal.test  pr2_bimodal.test  yumi_bimanual.test  yumi_handover.test
src/mtc_pour/: CMakeLists.txt  package.xml
src/mtc_pour/cadb/: arm_2017-08-03T13:28:52.791595.ompldb  manifest
src/mtc_pour/include/moveit/task_constructor/stages/: pour_into.h
src/mtc_pour/include/mtc_pour/: demo_utils.hpp
src/mtc_pour/launch/: tams_ur5_demo_prerequisites.launch  tams_ur5_demo_prerequisites2.launch  tams_ur5_prerequisites.launch
src/mtc_pour/meshes/: bottle.stl  glass.stl  glass_binary.stl  small_bottle.stl
src/mtc_pour/src/: mtc_pour_baxter_demo.cpp  mtc_pour_tams_ur5_demo.cpp  mtc_pour_tams_ur5_demo2.cpp  pour_into.cpp  pour_into2.cpp
src/my_mtc_demos/: CMakeLists.txt  CMakeLists2.txt  package.xml
src/my_mtc_demos/config/: mtc.rviz  mtc10.rviz  mtc11.rviz  mtc12.rviz  mtc13.rviz  mtc15.rviz  mtc2.rviz  mtc3.rviz  mtc6.rviz  mtc7.rviz  mtc8.rviz  mtc9.rviz  mtc_cartesian3.rviz  mtc_cartesian4.rviz  panda_config11.yaml  panda_config14.yaml  panda_config6.yaml  panda_config7.yaml  panda_config9.yaml
src/my_mtc_demos/launch/: demo10.launch  demo11.launch  demo12.launch  demo15.launch  demo2.launch  demo5.launch  demo7.launch  demo8.launch  demo9.launch  pickplace11.launch  pickplace12.launch  pickplace13.launch  pickplace15.launch  pickplace2.launch  pickplace3.launch  pickplace5.launch  pickplace9.launch
src/my_mtc_demos/src/: README.md  cartesian2.cpp  cartesian3.cpp  cartesian4.cpp  modular2.cpp  moveit_task_constructor_demo10.cpp  moveit_task_constructor_demo11.cpp  moveit_task_constructor_demo13.cpp  moveit_task_constructor_demo14.cpp  moveit_task_constructor_demo2.cpp  moveit_task_constructor_demo4.cpp  moveit_task_constructor_demo7.cpp  moveit_task_constructor_demo8.cpp  moveit_task_constructor_demo9.cpp  pick_place_task10.cpp  pick_place_task11.cpp  pick_place_task15.cpp  pick_place_task2.cpp  pick_place_task3.cpp  pick_place_task5.cpp  pick_place_task6.cpp  pick_place_task7.cpp  pick_place_task8.cpp  pick_place_task9.cpp
src/panda/: CMakeLists.txt
src/panda/launch/: add_pointcloud.launch  display.launch  move_group_cpp_interface.launch
src/panda/robots/: four_panda_arm_hand.urdf.xacro  hand.xacro  hand_extralink.xacro  panda_arm.xacro  panda_arm1.xacro  panda_arm2.xacro  panda_arm_hand.urdf.xacro  two_panda_arm.urdf.xacro  two_panda_arm_hand.urdf.xacro  two_panda_arm_hand_extralink.urdf.xacro  two_panda_arm_hand_gazebo.urdf
src/panda/rviz/: panda.rviz  two_panda.rviz
src/panda/scripts/: move_group_python_interface.py  pick_and_place_simple.py
src/panda/src/: move_group_cpp_interface.cpp
src/simple_arm/: README.md
src/two_panda_moveit_config/: .setup_assistant  CMakeLists.txt  package.xml
src/two_panda_moveit_config/config/: fake_controllers.yaml  joint_limits.yaml  kinematics.yaml  ompl_planning.yaml  panda.srdf  panda2.srdf2  ros_controllers.yaml
src/two_panda_moveit_config/launch/: chomp_planning_pipeline.launch.xml  default_warehouse_db.launch  demo.launch  demo_gazebo.launch  fake_moveit_controller_manager.launch.xml  gazebo.launch  move_group.launch  moveit_rviz.launch  ompl_planning_pipeline.launch.xml  panda_moveit_controller_manager.launch.xml  ros_controllers.launch  (+8 more)
(+12 files in other folders)
