<?xml version="1.0"?>
<package format="2">
  <name>mtc_demos</name>
  <version>0.0.0</version>
  <description>Examples for Moveit Task Constructor</description>

  <maintainer email="rhaschke@techfak.uni-bielefeld.de">Robert Haschke</maintainer>

  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>moveit_ros_planning_interface</build_depend>
  <build_depend>moveit_task_constructor_core</build_depend>
  <build_depend>rviz_marker_tools</build_depend>
  <build_depend>eigen_conversions</build_depend>

  <exec_depend>moveit_ros_planning_interface</exec_depend>
  <exec_depend>moveit_task_constructor_core</exec_depend>
  <exec_depend>rviz_marker_tools</exec_depend>
  <exec_depend>eigen_conversions</exec_depend>

  <export>
  </export>
</package>
